# inkscape_animation

./: CMakeLists.txt  NEWS  README.md  TRANSLATORS  config.h.cmake  configure.ac  dependency_graph.gv  mingwenv.bat  mingwenv.cmake  todo.txt
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile_insert  attributes.cpp  attributes.h  check-header-compile  cms-system.h  color-profile.cpp  conn-avoid-ref.cpp  context-fns.cpp  desktop-events.cpp  desktop.cpp  desktop.h  document-subset.cpp  document.cpp  document.h  event-log.cpp  file-update.cpp  file.cpp  file.h  gc-anchored.cpp  gradient-drag.cpp  graphlayout.cpp  guide-snapper.cpp  id-clash.cpp  inkscape-version.cpp  inkscape-version.cpp.in  inkscape-x64.rc  inkscape.cpp  inkscape.rc  inkview-options-group.cpp  inkview-options-group.h  inkview-x64.rc  inkview.cpp  inkview.rc  knot-holder-entity.cpp  layer-fns.cpp  layer-fns.h  (+45 more)
src/2geom/: makefile
src/debug/: demangle.cpp  demangle.h  event.h  gc-heap.h  heap.h  log-display-config.cpp  logger.cpp  makefile  simple-event.h  sysv-heap.h  timestamp.cpp  timestamp.h
src/display/: canvas-axonomgrid.cpp  canvas-grid.cpp  makefile  nr-svgfonts.cpp  sp-canvas.cpp
src/extension/: dependency.cpp  dependency.h  effect.cpp  effect.h  execution-env.cpp  execution-env.h  extension.cpp  extension.h  init.cpp  makefile  patheffect.cpp
src/filters/: componenttransfer-funcnode.h  diffuselighting.cpp  distantlight.h  makefile  pointlight.h  specularlighting.cpp
src/helper/: geom-pathvectorsatellites.cpp  geom-pathvectorsatellites.h  geom-satellite.cpp  geom-satellite.h  makefile  sp-marshal.cpp  sp-marshal.h  sp-marshal.list
src/inkgc/: gc-core.h
src/io/: CMakeLists.txt  base64stream.cpp  http.cpp  http.h  makefile  resource.cpp  resource.h  sys.cpp  sys.h  uristream.h
src/libavoid/: CMakeLists.txt  connector.cpp  libavoid.sln  libavoid.vcxproj
src/libcroco/: cr-parser.c  cr-parser.h  cr-pseudo.c  cr-pseudo.h  cr-sel-eng.c  cr-sel-eng.h  cr-selector.c  cr-simple-sel.c  cr-simple-sel.h  cr-stylesheet.c  cr-stylesheet.h  cr-term.c  cr-term.h  cr-token.h  makefile
src/libgdl/: CMakeLists.txt  Makefile_insert  README.gdl-dock  gdl-dock-bar.c  gdl-dock-bar.h  gdl-dock-item-button-image.c  gdl-dock-item-button-image.h  gdl-dock-item-grip.c  gdl-dock-item-grip.h  gdl-dock-item.c  gdl-dock-item.h  gdl-dock-master.c  gdl-dock-master.h  gdl-dock-notebook.c  gdl-dock-notebook.h  gdl-dock-object.c  gdl-dock-object.h  gdl-dock-paned.c  gdl-dock-paned.h  gdl-dock-placeholder.c  gdl-dock-placeholder.h  gdl-dock-tablabel.c  gdl-dock-tablabel.h  gdl-dock.c  gdl-dock.h  gdl-i18n.c  gdl-i18n.h  gdl-switcher.c  gdl-switcher.h  gdl-win32.c  gdl-win32.h  gdl.h  libgdlmarshal.c  libgdlmarshal.h  libgdlmarshal.list  libgdltypebuiltins.c  libgdltypebuiltins.h  makefile  makefile.in
src/libnrtype/: FontFactory.cpp  Layout-TNG-Compute.cpp  Layout-TNG-Input.cpp  font-lister.cpp  makefile
src/libuemf/: makefile
src/livarot/: PathOutline.cpp  README  Shape.h  int-line.h  makefile
src/live_effects/: CMakeLists.txt  README  effect-enum.h  effect.cpp  effect.h  lpe-angle_bisector.cpp  lpe-attach-path.cpp  lpe-bendpath.cpp  lpe-bendpath.h  lpe-bool.cpp  lpe-bool.h  lpe-bounding-box.cpp  lpe-bspline.cpp  lpe-circle_3pts.cpp  lpe-clone-original.cpp  lpe-clone-original.h  lpe-constructgrid.cpp  lpe-copy_rotate.cpp  lpe-copy_rotate.h  lpe-curvestitch.cpp  lpe-curvestitch.h  lpe-dash-stroke.cpp  lpe-dash-stroke.h  lpe-dynastroke.cpp  lpe-embrodery-stitch-ordering.cpp  lpe-embrodery-stitch-ordering.h  lpe-embrodery-stitch.cpp  lpe-embrodery-stitch.h  lpe-envelope.cpp  lpe-extrude.cpp  lpe-fill-between-many.cpp  lpe-fill-between-many.h  lpe-fill-between-strokes.cpp  lpe-fill-between-strokes.h  lpe-fillet-chamfer.cpp  lpe-fillet-chamfer.h  lpe-interpolate.cpp  lpe-interpolate_points.cpp  lpe-jointype.cpp  lpe-jointype.h  (+52 more)
src/object/: CMakeLists.txt  README  box3d-side.cpp  box3d-side.h  box3d.cpp  color-profile.cpp  color-profile.h  object-set.cpp  object-set.h  persp3d-reference.h  persp3d.cpp  persp3d.h  sp-anchor.cpp  sp-anchor.h  sp-clippath.cpp  sp-clippath.h  sp-conn-end-pair.cpp  sp-conn-end-pair.h  sp-conn-end.cpp  sp-defs.cpp  sp-defs.h  sp-desc.h  sp-dimensions.h  sp-ellipse.cpp  sp-ellipse.h  sp-factory.cpp  sp-filter.cpp  sp-filter.h  sp-flowdiv.cpp  sp-flowdiv.h  sp-flowregion.cpp  sp-flowtext.cpp  sp-font-face.h  sp-font.cpp  sp-font.h  sp-glyph-kerning.h  sp-glyph.h  sp-gradient.cpp  sp-guide.cpp  sp-guide.h  (+72 more)
src/svg/: README  makefile  svg-affine-test.h  svg-color.cpp  svg-length-test.h  svg-length.cpp  svg-length.h
src/trace/: README  makefile  trace.cpp  trace.h
src/ui/: CMakeLists.txt  clipboard.cpp  clipboard.h  interface.cpp  makefile  monitor.cpp  monitor.h  object-edit.cpp  previewholder.cpp  previewholder.h  shape-editor.cpp
src/util/: CMakeLists.txt  README  ege-tags.cpp  enums.h  expression-evaluator.cpp  format.h  makefile  share.cpp  share.h  ziptool.cpp
src/widgets/: CMakeLists.txt  Makefile_insert  animation-control.cpp  animation-control.h  arc-toolbar.cpp  box3d-toolbar.cpp  button.cpp  button.h  calligraphy-toolbar.cpp  connector-toolbar.cpp  desktop-widget.cpp  dropper-toolbar.cpp  eek-preview.cpp  ege-adjustment-action.cpp  eraser-toolbar.cpp  gradient-selector.cpp  gradient-toolbar.cpp  icon.cpp  icon.h  ink-action.h  ink-radio-action.cpp  ink-radio-action.h  ink-toggle-action.cpp  ink-toggle-action.h  ink-tool-menu-action.cpp  ink-tool-menu-action.h  keyframe-bar.cpp  keyframe-bar.h  keyframe-widget.cpp  keyframe-widget.h  lpe-toolbar.cpp  makefile  mappings.xml  measure-toolbar.cpp  mesh-toolbar.cpp  node-toolbar.cpp  paint-selector.cpp  paintbucket-toolbar.cpp  pencil-toolbar.cpp  rect-toolbar.cpp  (+13 more)
src/xml/: README  attribute-record.h  comment-node.h  composite-node-observer.cpp  composite-node-observer.h  event.cpp  event.h  helper-observer.cpp  helper-observer.h  log-builder.cpp  log-builder.h  makefile  node-observer.h  pi-node.h  rebase-hrefs.cpp  repr-css.cpp  repr-io.cpp  repr-util.cpp  repr.h  simple-document.cpp  simple-document.h  simple-node.h  (+2 more)
(+969 files in other folders)
